# Atlas

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  architecture.md  atlas_snapshots.sqlite  pyproject.toml  requirements.txt
.github/workflows/: backtest.yml  deploy-pages.yml
atlas/: __init__.py  __main__.py  about.py  alerts.py  backtest.py  config.py  dashboard.py  data_fetch.py  detail.py  indicators.py  regime.py  runner.py  scoring.py  server.py  snapshot.py  types.py
atlas/pipelines/: __init__.py  daily.py
atlas/report/: __init__.py  explain.py  similarity.py  state_machine.py
atlas/site/: __init__.py  about.py  dashboard.py  detail.py
atlas/storage/: __init__.py  artifacts.py  snapshot_store.py
data/: atlas_snapshots.sqlite
reports/: backtest.html  backtest.json
site-data/: dashboard_view.json  latest.json  manifest.json  regime_history.json  schema.json  universe.json
site-data/daily/: 2026-07-09.json  2026-07-10.json  2026-07-13.json  2026-07-14.json  2026-07-15.json  2026-07-16.json  2026-07-17.json  2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-23.json
templates/: dashboard.html.j2
tests/: conftest.py  test_about.py  test_alerts.py  test_artifacts.py  test_backtest.py  test_data_fetch.py  test_detail.py  test_explain.py  test_indicators.py  test_persistence.py  test_regime.py  test_scoring.py  test_server.py  test_similarity.py  test_state_machine.py  test_view_model.py
web/: manifest.webmanifest  sw.js
